# aoc

aoc2015/: Cargo.toml
aoc2015/src/: grid.rs
aoc2021/: 1.hs  10.hs  11.py  12.hs  13.hs  14.hs  15.hi  15.hs  16.hs  2.hs  3.hs  4.hs  4.py  5.hs  5.py  6.hs  7.hs  8.hs  9.py  Utils.hi  Utils.hs
aoc2022/: 01.hs  02.hs  03.hs  04.hs  05.hs  06.hs  07.hs  08.hs  09.hs  10.hs  11.hs  12  12.hs  13.hs  14.hs  15.hs  16.hs  17.hs  18.hs  19.hs  20  20.hi  20.hs  20.hs.old  21.hs  22.hs  23  23.hs  24.hi  24.hs  25.hs  Parser.hs  Queue.hs  debug.py  gentleman.hs  parser.hs
aoc2023/: 20.dot  23.dot  25.dot  Cargo.toml  counts.csv  dynamic.txt  graph.dot  true.txt
aoc2023/src/: geometry.rs  grid.rs  lib.rs
aoc2024/: 24.in  24.out  Cargo.toml
aoc2024-duckdb/: 01.sql  02.sql  inputs
aoc2024/inputs/: 16.custom
aoc2024/src/: grid.rs  utils.rs
aoc2025/: Cargo.toml
aoc2025/inputs/: day05.test
aoc2025/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  main.rs
aoc2025/src/utils/: grid.rs  mod.rs
santa2022/: getting-started-with-santa-2022.ipynb
santa2022/.ipynb_checkpoints/: getting-started-with-santa-2022-checkpoint.ipynb
